--- a/server/lang/l001/j001/j106/bbb/104x.md
+++ b/server/lang/l001/j001/j106/bbb/104x.md
@@ -1,4 +1,6 @@
-#   [设计实现](https://docs.oracle.com/javase/8/docs/technotes/guides/collections/index.html)
+#   [接口类概述](https://docs.oracle.com/javase/8/docs/technotes/guides/collections/index.html)
+
+Java 集合接口类组织方式，2个根接口、6个抽象骨架类、7种具体实现，算法是以类方法出现，另外还提供了一些针对性操作。
 
 -   [集合框架API-`导图`](https://www.processon.com/view/link/5e6df68ee4b011fcce9621fd)
 -   文档
@@ -9,11 +11,9 @@
     -   [java.util.function](https://docs.oracle.com/javase/8/docs/api/java/util/function/package-summary.html)：提供lambda表达式
     -   [java.util.stream](https://docs.oracle.com/javase/8/docs/api/java/util/stream/package-summary.html)：为集合提供流式处理
 
-Java 集合接口类组织方式，2个根接口、6个抽象骨架类、7种具体实现，算法是以类方法出现，另外还提供了一些针对性操作。
+##  数据组织
 
-### 数据组织
-
-层次结构很清晰
+层次结构很清晰，接口定义功能，描述需求，抽象类实现公共基础实现，具体实现增加额外特性应对不同场景。
 
 -   集合接口
     -   Collection：一组对象，没有添加任何属性
@@ -40,7 +40,7 @@ Java 集合接口类组织方式，2个根接口、6个抽象骨架类、7种具
     -   并发实现：这些实现是java.util.concurrent的一部分
 -   算法
 
-### 数据操作
+##  数据操作
 
 为集合处理提供额外的功能
 
