--- a/bbb/201912/013.md
+++ b/bbb/201912/013.md
@@ -219,6 +219,18 @@ allprojects{
     -   ![STS-005.png](image/STS-005.png)
 -   设置Tomcat
     -   ![STS-006.png](image/STS-006.png)
+-   设置字体
+    -   下载 [JetBrainsMono字体](https://www.jetbrains.com/lp/mono/)
+    -   ![20200318103237](image/20200318103237.png)
+-   设置注解模板
+
+``` Java
+/**
+ * @author kaoshanji
+ * @time ${date} ${time}
+ */
+```
+-   ![20200318103754](image/20200318103754.png)
 
 ### 新建 项目
 -   Java SE 项目
