--- a/server/lang/l001/j001/j101/ge/books/b007/11x.md
+++ b/server/lang/l001/j001/j101/ge/books/b007/11x.md
@@ -96,6 +96,12 @@ Stack 叫做 Stack<T> 泛型类的原生类型。
 
 ##  测试Stack泛型类
 
-283
+-   jdkx.type.ge.books.b007.StackDemoApp
+
+Long 数据类型是在变量声明时被指定的，push方法接收long类型参数，long类型参数会被自动装箱特性自动转换为Long数据类型，调用pop方法，从栈中弹出这些压入的条目，返回的Long数据类型会自动转换为long数据类型。如果试图往栈中压入其他数据类型，就会产生编译时错误。
+
+一般来说，当数据存储在数组、栈或列表这样的数据结构中时，只有程序员知道存储的对象类型是什么，并且负责在获取对象时进行对应的类型转换。如果在类型转换时出错，就会产生运行时错误。
+
+使用泛型可以在编译时检查到此类错误，继而让代码变得更加鲁棒。
 
 ----
