上限和下限

--- a/server/lang/l001/j001/j101/ge/books/b007/12x.md
+++ b/server/lang/l001/j001/j101/ge/books/b007/12x.md
@@ -72,11 +72,69 @@ class CustomComponent<T>
 
 定义泛型类时，当参数类型声明为上述例子中的T时，T可以被任何Java类替换，因为所有的Java类均派生自 java.lang.Object。
 
-289
+为了约束T使用特定的类集合，可以使用 extends 子句，例如：
+
+```Java
+class CustomComponent<T extends Component>
+```
+
+在这个例子中，T可被Component或其任何子类替换，这就是限定类型。
+
+当声明方法接受泛型作为参数时，使用通配符可以让方法接受指定层次结构中任何可用的类的实例，方法声明如下：
+
+```Java
+void describeComponent(CustomComponent<?> component)
+```
+
+该方法接受可操作Component或其任何子类的CustomComponent对象对象。
+
+如果希望约束参数，只操作特定类型或其子类，可以使用如下声明：
+
+```Java
+void describeComponent(CustomComponent<? extends JPasswordField> ref) {
+    //
+}
+```
+
+现在的 describeComponent 方法将接受操作 JTextField 及其子类的CustomComponent对象，就是只能传入 JTextField 与 JPasswordField 类型的参数，其他类型是不被接受的，这叫做限定通配符，其中的下限被设为 JTextField。
+
+同设置下限一样，还可以设置上限：
+
+```Java
+void describeComponent(CustomComponent<? super Container> ref) {
+    //
+}
+```
+Container的所有超类都将为可接受的参数，方法可以接受操作Object与Component的CustomComponent实例，Container及其所有子类都被省略了。
+
+为了限制类仅为 Container 、JComponent、 JTextComponent 与 JTextField ，可以声明如下方法：
+
+```Java
+void describeComponent(CustomComponent<? super JPasswordField> ref) {
+    //
+}
+```
+
+JPasswordField 是 JTextField 的子类，自身实例并不在可允许的对象列表中。
+
+还需要声明 CustomComponent，如下所示：
+
+```Java
+class CustomComponent<T extends Container>
+```
+
+这确保CustomComponent仅能接受Container及其子类，这样就可以限定describeComponent方法可操作的类范围的上限和下限。
 
 
 ##  原生类型
 
+在 FamousQuotes 应用里，创建列表：
 
+```Java
+ArrayList listOfFamousQuotes = new ArrayList<>();
+```
 
+ArrayList 可以接受类型参数，当使用不带参数的泛型类时，称为原生类型。
+
+创建原生类型的本质是为了向后兼容。
 ----
