--- a/server/lang/l001/j001/j101/ge/books/b007/13x.md
+++ b/server/lang/l001/j001/j101/ge/books/b007/13x.md
@@ -1,23 +1,73 @@
 #   关于泛型类的更多内容
 
+关于泛型更多特性。
+
 ##  带有两个类型参数的类
+
+HashMap类在J2SE 5.0 中定义如下：
+
+```Java
+class HashMap<K, V>
+```
+
+K与V 是类型参数，他们可以在实例化时被任何Java对象替换。HashMap 类用于存储键/值对，参数K用于指定键，而参数V用于指定值，K与V都可以是任意Java类型。
+
+-   jdkx.type.ge.books.b007.PlanetMap
+
+```Java
+Map<Integer, String> mapOFPlanets = new HashMap<>();
+```
+
+两个参数表明了K是Integer类型，V是String类型，然后就可以：
+
+```Java
+mapOFPlanets.put(1, "Me");
+```
+
+但是不能设置其他类型的值
 
 
 ##  类型转换
 
+泛型类型即使存在父子关系，子类转换成父类或父类转成成子类，都会失败。
 
 
 ##  比较和赋值类型参数
 
+-   jdkx.type.ge.books.b007.UniverseTypeDemoApp
 
+```Java
+if (ff == ff)
+```
+
+这样编译异常，赋值操作也是异常
 
 ##  泛型方法
 
+泛型方法接受类型参数或返回泛型值，这类方法可定义在泛型类或非泛型类中。
 
+```Java
+// 泛型参数
+void push(T data)
+
+// 泛型返回值
+T pop()
+```
 
 ##  声明泛型接口
 
+与创建泛型类与泛型方法一样，还可以创建操作泛型数据类型的接口，例如：
 
+```Java
+public interface Map<K,V>
+```
 
+Map 接口使用两个类型参数，泛型类将在实现中使用这两个类型参数，例如：
+
+```Java
+public class HashMap<K,V> extends AbstractMap<K,V> implements Map<K,V>, Cloneable, Serializable 
+```
+
+HashMap 类除了实现 Map接口，还实现了两个非泛型接口：Cloneable、Serializable，类在声明中可以实现任意数量的泛型与非泛型接口。
 
 ----
