--- a/server/lang/l001/j001/j101/ge/books/b007/14x.md
+++ b/server/lang/l001/j001/j101/ge/books/b007/14x.md
@@ -1,12 +1,48 @@
 #   泛型约束
 
+当程序中使用泛型时，必须遵守使用的特定约束。
+
 ##  创建数组
 
+可以创建这样的数组：
+
+```Java
+ T[] stack = (T[]) new Object[100];
+ Number stack [] = new Number[5];
+```
+
+但是不能创建这样的数组：
+
+```Java
+ stack =  new T[100];
+```
+
+不能创建泛型数组，但是可以创建泛型数组类型的变量，例如：
+
+```Java
+Stack(T[] stack) {
+    ////
+}
+```
 
 ##  实例化类型参数
 
+创建泛型对象是不允许的。
+
+```Java
+class NumberStack<T extends Number>
+```
+
+NumberStack 类使用了类型参数T，试图在类定义中的任何其他地方实例化类型参数都是非法的，不能在代码的其他地方调用 new T()。
 
 ##  static关键字的使用
 
+泛型类型的变量总是被认为是非静态的，真实类型会在预编译阶段被替换。
+
+不能将 static 关键字用在泛型变量。
+
+泛型类型变量不能用在被static修饰的方法里
+
+static 变量与方法总是附加于类实现而非实例。
 
 ----
