--- a/server/lang/l001/j001/j101/ge/books/b007/15x.md
+++ b/server/lang/l001/j001/j101/ge/books/b007/15x.md
@@ -1,6 +1,13 @@
 #   小结
 
+Java 一直被认为是一门强类型语言，泛型使编译器的类型检查变得更加严格。
 
+J2SE 5.0 有两个重要贡献，首先，泛型为编译时的集合类型增添了类型检查，从而确保集合保存的对象类型被限制为传递过来的类型，其次，他们减少了从集合中取出元素时的类型转换。
 
+泛型是参数化类型，使用泛型能够为程序实施更好的类型安全，在实例化时，提供实际数据类型来替代参数类型。
+
+编译器消除了源程序中的类型参数，并创建了原生的Java类。编译器不会为每个特定的实际类型生成多个类，取而代之的是，只会创建一份原生类，并在必要时提供对应的类型转换。
+
+类型参数可以约束上限和下限，使用通配符可以指明泛型方法可接受任何允许的实际类型，这一特性在集合框架中被广泛应用。
 
 ----
