--- a/server/lang/l001/j001/j101/ge/books/b001/12x.md
+++ b/server/lang/l001/j001/j101/ge/books/b001/12x.md
@@ -2,7 +2,14 @@
 
 可以定义一个带有类型参数的简单方法。
 
+-   jdkx.type.ge.books.b001.ArrayAlg
 
+```Java
+public static <T> T getMiddle(T...a) {
+    return a[a.length/2];
+}
+```
 
+这是一个定义在普通类中的泛型方法，从尖括号和类型变量看出这一点。
 
-
+----
