--- a/server/lang/l001/j001/j101/ge/books/b001/13x.md
+++ b/server/lang/l001/j001/j101/ge/books/b001/13x.md
@@ -1,1 +1,23 @@
 #   类型变量的限定
+
+有时，类和方法需要对类型变量加以约束，比如计算数组中最小元素，需要确保添加进数组的元素 T 有 compareTo 方法。
+
+解决方案是将 T 限制为实现了 Comparable 接口(只有一个方法 compareTo 的标准接口) 的类。可以通过对类型变量 T 设置限定实现这一点：
+
+```Java
+public static <T extends Comparable> T min(T[] a)
+```
+
+表示 T 应该是绑定类型的子类型，T 和 绑定类型可以是类，也可以是接口。
+
+一个类型变量或通配符可以有多个限定，例如：
+
+```Java
+T extends Comparable & Serializable
+```
+
+限定类型用 "&" 分割，类型变量用逗号分割。
+
+在Java的继承中，可以根据需要拥有多个接口超类型，但限定中至多有一个类，如果用一个类作为限定，他必须是限定列表中的第一个。
+
+----
