--- a/server/lang/l001/j001/j101/ge/books/b001/14x.md
+++ b/server/lang/l001/j001/j101/ge/books/b001/14x.md
@@ -1,20 +1,163 @@
 #   泛型代码和虚拟机
 
-
+虚拟机没有泛型类型对象---所有对象都属于普通类。
 
 ##  类型擦除
 
+无论何时定义一个泛型类型，都自动提供了一个相应的原始类型。原始类型的名字就是删去类型参数后的泛型类型名。
+
+擦除类型变量，并替换为限定类型(无限定的变量用Object)，例如 Pair<T> 的原始类型如下：
+
+```Java
+public class Pair {
+	
+	private Object first;
+	private Object second;
+	
+	public Pair(Object first, Object second) {
+		this.first = first;
+		this.second = second;
+	}
+
+	public Object getFirst() {
+		return first;
+	}
+
+}
+```
+
+因为 T 是一个无限定的变量，所以直接用 Object 替换，结果是一个普通的类，就在引入Java语言之前那样。
+
+在程序中可以包含不同类型的 Pair ，例如，Pair<String> 或 Pair<LocaDate>，而擦除类型后就变成原始的 Pair 类型了。
+
+原始类型用第一个限定的类型变量来替换，如果没有给限定就用 Object 替换。
 
 ##  翻译泛型表达式
 
+当程序调用泛型方法时，如果擦除返回类型，编译器插入强制类型转换，例如，下面这个语句序列：
 
+```Java
+Pair<Employee> buddies = ....;
+Employee buddy = buddies.getFirst();
+```
+
+擦除 getFirst 的返回类型后将返回 Object 类型。编译器自动插入 Employee 的强制类型转换。就是说，编译器把这个方法调用翻译为两条虚拟机指令：
+
+-   对原始方法 Pair.getFirst 的调用
+-   将返回的 Object 类型强制转换为 Employee 类型
+
+当存取一个泛型域时也要插入强制类型转换。假设 Pair 类的 first 域和 second 域都是公有的(不是一种好的编程风格，但在Java合法)，表达式：
+
+```Java
+Employee buddy = buddies.first;
+```
+
+也会在结果字节码中插入强制类型转换。
 
 ##  翻译泛型方法
 
+类型擦除也会出现在泛型方法中，例如：
+
+```Java
+public static <T extends Comparable> T minmax(T[] a)
+```
+
+是一个完整的方法族，而擦除类型之后，只剩下一个方法：
+
+```Java
+public static Comparable  minmax(Comparable[] a)
+```
+
+类型参数 T 已经被擦除了，只留下了限定类型 Comparable。
+
+方法的擦除带来了两个复制问题，看一下下面的示例：
+
+```Java
+class DateInterval extends Pair<LocalDate> {
+
+    // 注意方法签名。。虚拟机判断方法是 返回类型和参数类型
+    public void setSecond(LocalDate second) {
+        if (second.compareTo(getFirst()) >= 0) {
+            super.setSecond(second);
+        }
+    }
+
+}
+```
+
+一个日期区间是一对 LocalDate 对象，并且需要覆盖这个方法来确保第二个值永远不小于第一个值，这个类擦除后变成：
+
+```Java
+class DateInterval extends Pair {
+
+    public void setSecond(LocalDate second) {
+
+    }
+
+}
+```
+
+这里还存在一个`奇奇怪怪`的方法，从 Pair 继承来的：
+
+```Java
+// Pair 类型擦除之后。。
+public void setSecond(Object second)
+```
+
+这显然是一个不同的方法，因为他有一个不同的类型参数--Object，而不是 LocalDate，但是，应该一样！
+
+考虑下面的语句序列：
+
+```Java
+DateInterval interval = new DateInterval(...); // 子类型
+Pair<LocalDate> pair = interval; // 子类型赋值给父类型
+pair.setSecond(aDate); // 发生多态
+```
+
+这里，希望对 setSecond 的调用具有多态性，并调用最合适的那个方法。由于 pair 引用 DateInterval 对象，所以应该调用 DateInterval.setSecond。
+
+问题在于类型擦除与多态发生了冲突，要解决这个问题，就需要编译器在 DateInterval 类中生成一个桥方法：
+
+```Java
+public void setSecond(Object second) {
+    // 桥。。外面看到的是 Object ，里面是 Date
+    setSecond((Date)second);
+}
+```
+
+要想了解他的工作过程，仔细跟踪下列语句的执行：
+
+```Java
+pair.setSecond(aDate); 
+```
+
+变量 pair 已经声明为类型 Pair<LocalDate>，并且这个类型只有一个简单的方法叫 setSecond，即 setSecond(Object)。
+
+虚拟机用 pair 引用的对象调用这个方法，这个对象是 DateInterval 类型的，因而将会调用 DateInterval.setSecond(Object) 方法，这个方法是合成的桥方法，它调用 DateInterval.setSecond(Date)，这正是所期望的操作结果。
+
+如果 DateInterval 类中也覆盖了 getSecond 方法：
+
+```Java
+class DateInterval extends Pair<LocalDate> {
+
+    public LocalDate getSecond() {
+        。。
+    }
+
+}
+```
+
+不能编写这样的Java代码！在这里，具有相同参数类型的两个方法是不合法的。
+
+-   有关Java泛型转换的事实：
+    -   虚拟机中没有泛型，只有普通的类和方法
+    -   所有的类型参数都用他们的限定类型替换
+    -   桥方法被合成来保持多态
+    -   为保持类型安全性，必要时插入强制类型转换
 
 
 ##  调用遗留代码
 
-
+。。。。。
 
 ----
