--- a/server/lang/l001/j001/j101/ge/books/b001/15x.md
+++ b/server/lang/l001/j001/j101/ge/books/b001/15x.md
@@ -1,33 +1,230 @@
 #   约束与局限性
 
+使用Java泛型时需要考虑的一些限制，大多数限制都是由类型擦除引起的。
+
 ##  不能用基本类型实例化类型参数
 
+不能用类型参数代替基本类型，因此，没有 Pair<double>，只有 Pair<Double>。
 
-##  运行时类型查询只使用于原始类型
+其原因是类型擦除，擦除之后，Pair 类含有 Object 类型的域，而 Object 不能存储 double 值。
+
+##  运行时类型查询只适用于原始类型
+
+虚拟机中的对象总有一个特定的非泛型类型。因此，所有的类型查询只产生原始类型。
+
+getClass 方法总是返回原始类型。
 
 
 ##  不能创建参数化类型的数组
 
+不能实例化参数化类型的数组。
+
+```Java
+Pair<String>[] table = new Pair<String> [10]; // Error
+```
+
+擦除之后，table 的类型是 Pair[]，可以把它转换为 Object[]：
+
+```Java
+Object [] objarray = table;
+```
+
+数组会记住他的元素类型，如果试图存储其他类型的元素，就会抛出一个 ArrayStoreException 异常：
+
+```Java
+objarray[0] = "hello";
+```
+
+对于泛型类型，擦除会使这种机制无效，以下赋值：
+
+```Java
+objarray[0] = new Pair<Employee>();
+```
+
+能够通过数组存储检查，不过仍会导致一个类型错误。
+
+但是，可以声明类型为 Pair<String>[] 的变量仍是合法的。
 
 ##  Varargs 警告
 
+向参数个数可变的方法传递一个泛型类型的实例，例如：
+
+```Java
+public static <T> void addAll(Collection<T> coll, T... ts) {
+    for (t : ts) coll.add(t);
+}
+```
+
+实际上参数ts是一个数组，包含提供的所有实参。
+
+考虑以下调用：
+
+```Java
+Collection<Pair<String>> table = 。。。;
+Pair<String> p1 = 。。。;
+Pair<String> p2 = 。。。;
+addAll(table, p1, p2);
+```
+
+对于这样的调用，会得到一个警告，而不是错误。
+
+在 包含 addAll 调用的方法增加注解 @Suppress Warnings("unchecked")，或者 用 @SafeVarags 直接标注 addAll 方法。
 
 ##  不能实例化类型变量
 
+不能使用像 new T(。。)、new T[。。] 或 T.class 这样的表达式中的类型变量。例如，下面的 Pair<T> 构造器就是非法：
+
+```Java
+public Pair() {
+    // 非法
+    first = new T();
+    second = new T();
+}
+```
+
+类型擦除将 T 改变成 Object，而且，本意肯定不希望调用 new Object()。
+
+在 Java SE 8 之后，可以让调用者提供一个构造器表达式，例如：
+
+```Java
+Pair<String> p = Pair.makePair(String :: new);
+```
+
+makePair 方法接收一个 Supplier<T>，这是一个函数式接口，表示一个无参数而且返回类型为 T 的函数：
+
+```Java
+public static <T> Pair<T> makePair(Supplier<T> constr) {
+    return new Pair<>(constr.get(), constr.get());
+}
+```
+
+比较传统的解决方法时通过反射调用 Class.newInstance 方法来构造泛型对象，例如：
+
+```Java
+public static <T> Pair<T> makePair(Class<T> cl) {
+    try {
+        return new Pair<>(cl.newInstance(), cl.newInstance());
+    }
+
+}
+```
+
+这个方法可以按照下列方式调用：
+
+```Java
+Pair<String> p = Pair.makePair(String.class);
+```
+
+Class 类本身是泛型，String.class 是一个 Class<String> 的实例(事实上，他是唯一的实例)。
 
 ##  不能构造泛型数组
+
+就像不能实例化一个泛型实例一样，也不能实例化数组。不过，原因有所不同，比较数组会填充 null 值，构造时看上去是安全的。不过，数组本身也是有类型，用来监控存储在虚拟机中的数组，这个类型会被擦除，例如，下面的例子：
+
+```Java
+public static <T extends Comparable> T[] minmax(T[] a) {
+    T[] mm = new T[2]; // Error
+}
+```
+
+类型擦除会让这个方法永远构造 Comparable[2] 数组。
+
+如果数组仅仅作为一个类的私有实例域，就可以将这个数组声明为 Object[]，并且在获取元素时进行类型转换。例如，ArrayList 类可以这样实现：
+
+```Java
+public class ArrayList<E> {
+
+    // Object 类型
+    private Object [] elements;
+
+    public E get(int n) {
+        return (E)elements[n];
+    }
+
+    public void set(int n, E e) {
+        elements[n] = e;
+    }
+
+}
+```
+
+实际的实现没有这么清晰：
+
+```Java
+public class ArrayList<E> {
+    private E[] elements;
+
+    public ArrayList() {
+        elements = (E[]) new Object[10];
+    }
+
+}
+```
 
 
 ##  泛型类的静态上下文中类型变量无效
 
+不能在静态域或方法中引用类型变量
 
 ##  不能抛出或捕获泛型类的实例
+
+既不能抛出也不能捕获泛型类型对象，实际上，甚至泛型类扩展 Throwable 都是不合法的。
+
+catch 子句中不能使用类型变量
+
+不过，在异常规范中使用类型变量时允许的，例如：
+
+```Java
+public static <T extends Throwble> void doWork(T t) throws T {
+    ////
+}
+```
 
 
 ##  可以消除对受查异常的检查
 
+。。。
 
 ##  注意擦除后的冲突
+
+当泛型类型被擦除时，无法创建引发冲突的条件，例如，将 equals 方法添加到 Pair 类中：
+
+```Java
+public class Pair<T> {
+    public boolean equals(T value) {
+        ////
+    }
+}
+```
+
+考虑一个 Pair<String> ，从概念上讲，他有两个 equals 方法：
+
+```Java
+boolean equals(String) // Pair<T>
+boolean equals(Object) // Object
+```
+
+方法擦除 boolean equals(T) 就是 boolean equals(Object)。
+
+补救方法时重新命名引发错误的方法。
+
+泛型规范说明还提到另外一个原则：要想支持擦除的转换，就需要强行限制一个类或类型变量不能同时成为两个接口类型的子类，而这两个接口是同一接口的不同参数化
+
+例如，下面的代码是非法的：
+
+```Java
+class Employee implements Comparable<Employee> {。。。}
+class Manager extends Employee implements Comparable<Manager> {。。。}
+```
+
+Manager 会实现 Comparable<Employee> 、Comparable<Manager>，这是同一接口的不同参数化。
+
+下列非泛型版本是合法的：
+
+```Java
+class Employee implements Comparable {。。。}
+class Manager extends Employee implements Comparable {。。。}
+```
 
 
 ----
