--- a/server/lang/l001/j001/j101/ge/books/b001/16x.md
+++ b/server/lang/l001/j001/j101/ge/books/b001/16x.md
@@ -1,1 +1,22 @@
 #   泛型类型的继承规则
+
+在使用泛型类时，需要了解一些有关继承和子类型的准则。
+
+考虑一个类和一个子类，如 Employee 和 Manager ， Pair<Manager> 是 Pair<Employee> 的一个子类吗？答案是"不是"！
+
+下面的代码将不能编译成功：
+
+```Java
+Manager[] topHonchos = ....;
+Pair<Employee> result = ArrayAlg.minmax(topHonchos); // Error
+```
+
+minmax 方法返回 Pair<Manager>，而不是 Pair<Employee> ，并且这样的赋值是不合法的。
+
+无论 S 与 T 有什么关系，通常， Pair<S> 与 Pair<T> 没有什么联系。
+
+永远可以将参数化类型转换为一个原始类型，例如，Pair<Employee> 是原始类型 Pair 的一个子类型。
+
+泛型类可以扩展或实现其他的泛型类，就这一点而言，与普通的类没有什么区别。
+
+----
