--- a/server/lang/l001/j001/j101/ge/bbb/10x.md
+++ b/server/lang/l001/j001/j101/ge/bbb/10x.md
@@ -4,12 +4,13 @@
 
 泛型对于集合类尤其有用，例如，ArrayList 就是一个无处不在的集合类，可以让开发人员更安全地使用 Java 标准库中的集合类，尽早地发现一些代码中包含的潜在错误。
 
+----
 
 ##  目的
 
 泛型实现了参数化类型的概念，使代码可以应用于多种类型。"泛型"这个术语的意思是："适用于许多许多的类型"。
 
-泛型在编程语言中出现时，其最初的目的是希望类或方法能够具备最广泛的表达能力，这正是通过解耦类或方法与所使用的类型之间的约束。
+泛型在编程语言中出现时，其最初的目的是希望类或方法能够具备最广泛的表达能力，这正是通过`解耦`类或方法与所使用的类型之间的约束。
 
 当你创建参数化类型的一个实例时，编译器会为你负责转型操作，并且保证类型的正确性。
 
@@ -17,7 +18,15 @@
 
 通常而言，只会使用容器来存储一种类型的对象，泛型的主要目的之一就是用来指定容器要持有什么类型的对象，而且由编译器来保证类型的正确性。
 
+----
+
 ##  优势
+
+在实际编码中体现出来的价值。
+
+### 代码写给人看
+
+使用泛型机制编写的程序代码要比那些杂乱无章的使用Object变量，然后再进行强制类型转换的代码具有更好的安全性和可读性。
 
 泛型主要有两个好处：
 
@@ -28,7 +37,7 @@
 
 Java 一直被认为是一门强类型语言，`类型安全`是Java语言的主要特征之一，借助泛型，这一特性得到了进一步深化。
 
-### 更通用
+### 代码更通用
 
 接口使得面向对象抽象更进一步，但是有时候，即使使用了接口，对程序的约束也还是太强了。因为一旦指明了接口，他就要求你的代码必须使用特定的接口，而我们希望达到的目的是编写`更通用`的代码，要使代码能够应用于 "某种不具体的类型"，而不是一个具体的接口或类。
 
@@ -38,7 +47,11 @@ Java 一直被认为是一门强类型语言，`类型安全`是Java语言的主
 
 通配符类型非常抽象，但是能让库的构建者编写出尽可能灵活的方法。
 
-### 集合类库
+### 伴生应用：集合类库
+
+Java 的集合类框架在 JDK 1.2 中被添加到 Java 标准库中，其中包含了常用的 java.util.List、java.util.Map 和 java.util.Set等接口及其实现类。
+
+为了能够存放任何类型的对象，集合类中的元素的类型统一为 Object 类。在存放元素时，不论对象的实际类型如何，都可以将其保存到集合中。在读取元素时，需要对得到的对象进行强制类型转换，转换成对象的实际类型。
 
 在 J2SE 5.0 引入泛型之前，Java 中的集合类对象实际上是异构类型对象的集合，就是什么类型的数据都可以添加到一个集合里。但是集合中通常包含的是同构类型的对象，就是相同类型的数据对象，只是Java语言并没有提供相应的机制来阻止向一个集合类的对象中添加不正确类型的对象，开发人员也不能在代码中表明集合类的对象中应该包含的对象类型。
 
@@ -46,12 +59,4 @@ Java 一直被认为是一门强类型语言，`类型安全`是Java语言的主
 
 逻辑方法仅与数据结构有关，与具体的接口或类的类型无关。
 
-
-##  带来的问题
-
-### 表现形式
--   泛型类
--   泛型方法
--   泛型接口
-
-
+----
