--- a/server/lang/l001/j001/j101/eh/books/b001/10x.md
+++ b/server/lang/l001/j001/j101/eh/books/b001/10x.md
@@ -75,13 +75,127 @@ Java语言规范将派生于 Error 类或 RuntimeException 类的所有异常称
 
 ##  声明受查异常
 
-267
+如果遇到无法处理的情况，那么 Java 的方法可以跑出一个异常，这很正常：一个方法不仅需要告诉编译器将要返回什么值，还要告诉编译器可能发生什么情况。
 
+例如，一段读取文件的代码知道有可能读取的文件不存在，或者内容为空，因此，试图处理文件信息的代码就需要知道编译器可能会抛出 IOException 类的异常。
+
+方法应该在其首部声明所有可能抛出的异常，这样可以从首部反应出这个方法可能抛出那类受查异常，例如：
+
+```Java
+public FileInputStream(String name) throws FileNotFoundException
+```
+
+这个声明表示这个构造器将根据给定的String参数产生一个 FileInputStream 对象，但也有可能抛出一个 FileNotFoundException 对象。如果发生了这种情况，构造器将不会初始化一个新的 FileInputStream 对象，而是抛出一个 FileNotFoundException 类对象。如果这个方法真的抛出了这样的异常对象，运行时系统就会开始搜索异常处理器，以便知道如何处理 FileNotFoundException 对象。
+
+下面 4 种情况时应该抛出异常：
+
+-   调用一个抛出受查异常的方法，例如 FileInputStream 构造器
+-   程序运行过程中发现错误，并且利用 throw 语句抛出一个受查异常
+-   程序出现错误，例如，ArrayIndexOutOfBoundException 这样的非受查异常
+-   Java 虚拟机和运行时库出现的内部错误
+
+如果出现前两种情况之一，则必须告诉调用这个方法的程序员有可能抛出异常，因为任何一个抛出异常的方法都有可能是一个死亡陷阱，如果没有处理器捕获这个异常，当前执行的线程就会结束。
+
+对于那些可能被他人使用的 Java 方法，应该根据异常规范，在方法的首部声明这个方法可能抛出的异常。
+
+```Java
+class MyAnimation {
+    public Image loadlmage(String s) throws IOException
+    {
+    }
+}
+```
+
+如果一个方法有可能抛出多个受查异常类型，那么就必须在方法的首部列出所有的异常类，每个异常类之间用逗号隔开，如下所示：
+
+```Java
+class MyAnimation
+{
+    public Image loadlmage(String s) throws FileNotFoundException, EOFException {
+    }
+}
+```
+
+但是，不需要声明 Java 的内部错误，即从 Error 继承的错误，任何程序代码都具有抛出那些异常的潜能，同样，也不应该声明从 RuntimeException 继承的那些非受查异常。
+
+如果特别关注数组下标引发的错误，就应该将更多的时间花费在修正程序中的错误上，而不是说明这些错误发生的可能性上。
+
+一个方法必须声明所有可能抛出的受查异常，而非受查异常要么不可控制(Error)，要么就应该避免发生(RuntimeException)。
+
+如果类中的一个方法声明将会抛出一个异常，而这个异常是某个特定类的实例时，则这个方法就有可能抛出一个这个类的异常，或者这个类的任意一个子类的异常。例如，FileInputStream 构造器声明将有可能抛出一个 IOException 异常，然而并不知道具体是那种IOException异常，他既可能是 IOException 异常，也可能是其子类的异常，例如，FileNotFoundException。
 
 ##  如何抛出异常
 
+假设在程序代码中发生了一些很糟糕的事情，一个名为 readData 的方法正在读取一个首部具有下列信息的文件：
+
+```
+Content-length：1024
+```
+
+读到 733 个字符之后文件就结束了，认为这是一种不正常的情况，希望抛出一个异常。
+
+首先要决定应该抛出什么类型的异常，将上述异常归结为 IOException 是一种很好的选择， EOFException 异常描述的是 "在输入过程中，遇到一个未预期的 EOF 后的信号"，这正是要抛出的异常，抛出这个异常的语句：
+
+```Java
+throw new EOFException();
+```
+
+下面将这些代码放在一起：
+
+```Java
+String readData(Scanner in) throws EOFException {
+    while (…）{
+    if (Mn.hasNextQ) { // EOF encountered
+        if (n < len)
+            throw new EOFException();
+    }
+    }
+    return s;
+}
+
+```
+
+EOFException 类还有一个含有一个字符串型参数的构造器，这个构造器可以更加细致的描述异常出现的情况：
+
+```Java
+            throw new EOFException("Content-length:" + len + ", Received:" + n);
+```
+
+对于一个已经存在的异常类，将其抛出非常容易，在这种情况下：
+
+-   找到一个合适的异常类
+-   创建这个类的一个对象
+-   将对象抛出
+
+一旦方法抛出了异常，这个方法就不可能返回到调用者，也就是说，不必为返回的默认值或错误代码担忧。
 
 ##  创建异常类
 
+在程序中，可能会遇到任何标准异常类都没有能够充分描述清楚的问题，这时就需要创建自己的异常类了。
+
+需要做的是定义一个派生于 Exception 的类，或派生于 Exception 子类的类，例如，定义一个派生于 IOException 的类，习惯上包含两个构造类，一个是默认的构造器；另一个是带有详细描述信息的构造器 (超类 Throwable 的 toString 方法将会打印出这些详细信息 )
+
+```Java
+class FileFormatException extends IOException {
+    public FileFormatException() {...}
+    public FileFormatException(String gripe) {
+        super(gripe);
+    }
+}
+```
+
+现在，就可以抛出自己定义的异常类型了
+
+```Java
+String readData(BufferedReader in) throws FileFormatException {
+    while (. . .) {
+        if (ch == -1) { // EOF encountered
+            if (n < len)
+                throw new FileFornatExceptionQ ;
+        }
+    }
+    return s;
+}
+```
 
 ----
