--- a/server/lang/l001/j001/j101/eh/books/b001/11x.md
+++ b/server/lang/l001/j001/j101/eh/books/b001/11x.md
@@ -255,7 +255,37 @@ try (Scanner in = new Scanner(new FileInputStream("usr/share/dict/words")) , "UT
 
 ##  分析堆栈轨迹元素
 
-280
+堆栈轨迹 是一个方法调用过程的列表，他包含了程序执行过程中方法调用的特定位置。
 
+可以调用 Throwable 类的 printStackTrace 方法访问堆栈轨迹的文本描述信息
 
+```Java
+Throwable t = new Throwable();
+StringWriter out = new StringWriter();
+t.printStackTrace(new PrintWriter(out));
+String description = out.toString();
+```
+
+一种更灵活的方法是使用 getStackTrace 方法，他会得到 StackTraceElement 对象的一个数组，可以在程序中分析这个对象数组，例如：
+
+```Java
+Throwable t = new Throwable();
+StackTraceElement [] frames = t.getStackTrace();
+for (StackTraceElement frame : frames) {
+    // frame
+}
+```
+
+StackTraceElement 类含有能够获得文件名和当前执行的代码行号的方法，同时，还含有能够获得类名和方法名的方法，toString 方法将产生一个格式化的字符串，其中包含所获得的信息。
+
+静态的 Thread.getAllStackTrace 方法，他可以产生所有线程的堆栈轨迹，如下所示：
+
+```Java
+Map<Thread, StackTraceElement[]> map = Thread.getAllStackTrace();
+for (Thread t : map.keySet()) {
+    StackTraceElement[] frames = map.get(t);
+    ///。。
+}
+
+```
 ----
