--- a/server/lang/l001/j001/j101/eh/books/b003/11x.md
+++ b/server/lang/l001/j001/j101/eh/books/b003/11x.md
@@ -1,4 +1,32 @@
 #   异常和异常处理
 
+本节讨论异常在设计方面的问题，以及如何在自己的代码中使用异常。
+
+在Java中，异常是对象，这个对象的类型是 java.lang.Throwable ，应该说是 Throwable 类的子类，更具体地描述发生的异常是什么类型。
+
+Throwable 类有两个标准子类：java.lang.Error 和 java.lang.Exception 。 Error 类的子类对应的异常表示不可恢复的问题，例如，虚拟机耗尽了内存，或类文件损坏了，无法读取，这是未检异常。
+
+Exception 类的子类对应的异常表示没有那么严重的状况，可以捕获并处理，但他的子类 RuntimeException 仍然属于未检异常。
+
+因为异常是对象，所以可以包含数据，而且异常所属的类可以定义方法，操作这些数据。
+
+Throwable 类及其子类都可以包含一个 String 类型的字段，存储一个人类可读的错误信息，描述发生的异常状况。这个字段的值在创建异常对象时设定，可以使用 getMessage() 方法从异常对象中读取。多数异常都只包含这个消息，但少数异常还包含其他数据。例如，java.io.InterruptedIOException 异常包含一个名为 bytesTransferred 的字段，表示在异常状况中断传输之前完成了多少输入或输出。
+
+自己设计异常时，要考虑建模异常对象需要哪些额外信息。这些信息一般是针对中断的操作和遇到的异常状况。
+
+在应用设计中使用异常时要做些权衡。使用已检异常的话，意味着编译器能处理(或顺着调用堆栈向上冒泡)可能恢复或重试的已知状况，还意味着更难忘记处理错误，因此能减少由于忘记处理错误状况而导致系统 在生产环境中崩溃的几率。
+
+另一方面，就算理论上某些状况建模为已检异常，有些应用也无法从这些状况中恢复。
+
+设计异常机制时，应该遵循下述良好的做法：
+
+-   考虑要在异常中存储什么额外状态---记住，异常也是对象
+-   Exception 类有四个公开的构造方法，一般情况下，自定义异常类时这四个构造方法都要实现，可用于初始化额外的状态，或者定制异常消息。
+-   不要在你的 API 中自定义很多细致的异常类
+-   别在一个异常类型中描述太多状况
+-   不要捕获异常而不处理
+-   不要捕获，记录日志后再重新抛出异常
+
+
 
 ----
