--- a/bbb/201912/015.md
+++ b/bbb/201912/015.md
@@ -88,6 +88,9 @@ openjdk-jdk-11-28 是解压后的原目录
 
 示例：[spring-framework](https://github.com/spring-projects/spring-framework)，Fork 到自己的[账户](https://github.com/kaoshanji/spring-framework)下，选择分支 `v4.3.24.RELEASE` 作为指定分支，并创建[自己的分支](https://github.com/kaoshanji/spring-framework/tree/kaoshanji-4.3.24)，如此一来，这个分支就由我完全控制了，并不会被官方更新，版本环境被固定，后面就可以进行了。
 
+显示为当前需要指定的分支，然后输入新的分支名字，就会以当前分支创建新的分支。
+
+
 `测试类`是很好的验证调试方式
 
 ----
