--- a/server/lang/l001/j004/mybatis/source/s020x.md
+++ b/server/lang/l001/j004/mybatis/source/s020x.md
@@ -85,26 +85,26 @@
     -   处理 Java 类型和 JDBC 类型之间的映射
 
 
-##  执行 SQL 流程
+##  执行 SQL
 
 >   SqlSession 执行 Mapper 过程
 
-1.  Mapper 接口注册
+-   Mapper 接口注册
 
 生成代理对象工程存放在 Configuration 中
 
 JDK 内置的动态代理生成动态对象，实现 InvocationHandler 接口， invoke() 方法中为通用拦截器
 
-2.  MappedStatement 注册
+-   MappedStatement 注册
 
 解析 Mapper.xml 文件的SQL语句存放在 Configuration 里
 
 接口包名+方法名 == XML命名空间+节点ID
 
-3.  Mapper 方法调用
+-   Mapper 方法调用
 
 动态代理实现的逻辑
 
-4.  SqlSession 执行 Mapper
+-   SqlSession 执行 Mapper
 
 ----
