--- a/server/lang/l001/j004/mybatis/source/s020x.md
+++ b/server/lang/l001/j004/mybatis/source/s020x.md
@@ -1,89 +1,20 @@
 #   解决方案
 
-从 MyBatis 组件寻找线索，文档对XML文件节点描述的很清楚
+##  XML文件
+-   统一管理SQL语句，框架自身配置
+-   定义SQL语句正好合适，通过标签可以分割各个语句，还处理了动态语句部分
+-   依据XML内容实现Java对象与查询结果及请求对象转换
 
-##  XML配置文件
+##  Java接口
+-   Java接口与XML文件SQL语句对应
+-   调用Java接口自动实现实际的SQL语句执行
 
--   `mybatis-config.xml` 给出了 MyBatis 主要组件作用、描述以及组件之间的关系。
+##  JDBC执行
+-   [JDBC 流程](https://www.processon.com/view/link/5dc8c8fbe4b07548229edd7e)
 
-```xml
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE configuration
-  PUBLIC "-//mybatis.org//DTD Config 3.0//EN"
-  "http://mybatis.org/dtd/mybatis-3-config.dtd">
-<configuration>
-    <properties resource="org/mybatis/example/config.properties"></properties>
-    <settings> </settings>
-    <typeAliases></typeAliases>
-    <typeHandlers></typeHandlers>
-    <objectFactory></objectFactory>
-    <plugins>
-        <plugin interceptor="org.mybatis.example.ExamplePlugin"> </plugin>
-    </plugins>
-    <objectFactory type="org.mybatis.example.ExampleObjectFactory">
-        <property name="someProperty" value="100"/>
-    </objectFactory>
-    <environments default="development">
-        <environment id="development">
-            <transactionManager type="JDBC"/>
-            <dataSource type="POOLED">
-            <property name="driver" value="${driver}"/>
-            <property name="url" value="${url}"/>
-            <property name="username" value="${username}"/>
-            <property name="password" value="${password}"/>
-            </dataSource>
-        </environment>
-    </environments>
-    <databaseIdProvider type="DB_VENDOR" />
-    <mappers>
-        <mapper resource="org/mybatis/example/BlogMapper.xml"/>
-    </mappers>
-</configuration>
-```
+----
 
--   `Mapper.xml` 是SQL语句集中的地方
-
-```xml
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE mapper
-		PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
-		"http://mybatis.org/dtd/mybatis-3-mapper.dtd">
-<mapper namespace="top.kaoshanji.learning.mybatis.mapper.MemberDistributionMapper">
-    <select id="getMemberDistributionById" parameterType="java.lang.Long" resultType="top.kaoshanji.learning.mybatis.entity.MemberDistributionEntity"></select>
-    <insert id="insertAuthor"parameterType="domain.blog.Author"flushCache="true">
-    <update id="updateAuthor" parameterType="domain.blog.Author">
-    <delete id="deleteAuthor"parameterType="domain.blog.Author">
-</mapper>
-
-```
-
-##  MyBatis-主要组件
-
-启动初始化时把上述一个`mybatis-config.xml` 和 很多的 `Mapper.xml`文件数据转换为 Configuration 对象。
-
--   [核心组件](https://www.processon.com/view/link/5e8b301ee4b0a1e6dcb6bdef)
--   Configuration
-    -   描述 MyBatis 的主配置信息，其他组件获取配置信息的来源
--   MappedStatement
-    -   描述 Mapper 中的 SQL 配置信息
-    -   CRUD 标签
--   SqlSession
-    -   MyBatis 提供的面向用户的API，对外提供易于理解和使用的数据库操作接口
-    -   表示和数据库交互时的会话对象
-    -   Executor 组件的外观
--   Executor
-    -   MyBatis 的SQL执行器，完成对数据库中所有的CRUD
--   StatementHandler
-    -   封装了 JDBC Statement 对象的操作
--   ParameterHandler
-    -   封装 JDBC PreparedStatement、CallableStatement
-    -   提供参数占位符设置值
--   ResultSetHandler
-    -   封装了 JDBC ResultSet 对象操作
-    -   查询语句时将查询结果转换成 Java 对象
--   TypeHandler
-    -   处理 Java 类型和 JDBC 类型之间的映射
-
+----
 
 ##  执行 SQL
 
@@ -106,5 +37,3 @@ JDK 内置的动态代理生成动态对象，实现 InvocationHandler 接口，
 动态代理实现的逻辑
 
 -   SqlSession 执行 Mapper
-
-----
